--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/DisneyplusClone/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/DisneyplusClone/assets/favicon-3a2f80c7.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Disney+ Clone</title>
 
